Replace "...opt" with "...(opt)"

--- a/en/ch02.md
+++ b/en/ch02.md
@@ -15,7 +15,7 @@ augments an existing grammar production it is so noted. For example:
 ```
 CallExpression: ( Modified )
     ...
-    super ( ArgumentListopt )
+    super ( ArgumentList(opt) )
     super . IdentifierName
 ```
 
