--- a/en/ch03.md
+++ b/en/ch03.md
@@ -295,7 +295,7 @@ TypeParameterList:
     TypeParameterList , TypeParameter
 
 TypeParameter:
-    Identifier Constraintopt
+    Identifier Constraint(opt)
 
 Constraint:
     extends Type
@@ -473,7 +473,7 @@ generic type, supplies a type argument list.
 
 ```text
 TypeReference:
-    TypeName [no LineTerminator here] TypeArgumentsopt
+    TypeName [no LineTerminator here] TypeArguments(opt)
 
 TypeName:
     Identifier
@@ -589,10 +589,10 @@ ElementType:
     ArrayType
 
 FunctionType:
-    TypeParametersopt ( ParameterListopt ) => Type
+    TypeParameters(opt) ( ParameterList(opt) ) => Type
 
 ConstructorType:
-    new TypeParametersopt ( ParameterListopt ) => Type
+    new TypeParameters(opt) ( ParameterList(opt) ) => Type
 ```
 
 Object type literals are the primary form of type literals and are described in section 3.7. Array, function,
@@ -640,10 +640,10 @@ declarations but are otherwise anonymous.
 
 ```text
 ObjectType:
-    { TypeBodyopt }
+    { TypeBody(opt) }
 
 TypeBody:
-    TypeMemberList ;opt
+    TypeMemberList ;(opt)
 
 TypeMemberList:
     TypeMember
@@ -666,7 +666,7 @@ A property signature declares the name and type of a property member.
 
 ```text
 PropertySignature:
-    PropertyName ?opt TypeAnnotationopt
+    PropertyName ?(opt) TypeAnnotation(opt)
 
 PropertyName:
     IdentifierName
@@ -693,7 +693,7 @@ defining multiple different call signatures.
 
 ```text
 CallSignature:
-    TypeParametersopt ( ParameterListopt ) TypeAnnotationopt
+    TypeParameters(opt) ( ParameterList(opt) ) TypeAnnotation(opt)
 ```
 
 A call signature that includes *TypeParameters* (section 3.4.1) is called a generic call signature. Conversely,
@@ -747,7 +747,7 @@ RequiredParameterList:
     RequiredParameterList , RequiredParameter
 
 RequiredParameter:
-    PublicOrPrivateopt Identifier TypeAnnotationopt
+    PublicOrPrivate(opt) Identifier TypeAnnotation(opt)
     Identifier : StringLiteral
 
 PublicOrPrivate:
@@ -759,11 +759,11 @@ OptionalParameterList:
     OptionalParameterList , OptionalParameter
 
 OptionalParameter:
-    PublicOrPrivateopt Identifier ? TypeAnnotationopt
-    PublicOrPrivateopt Identifier TypeAnnotationopt Initialiser
+    PublicOrPrivate(opt) Identifier ? TypeAnnotation(opt)
+    PublicOrPrivate(opt) Identifier TypeAnnotation(opt) Initialiser
 
 RestParameter:
-    ... Identifier TypeAnnotationopt
+    ... Identifier TypeAnnotation(opt)
 ```
 
 Parameter names must be unique. A compile-time error occurs if two or more parameters have the same
@@ -840,7 +840,7 @@ defining multiple construct signatures with different parameter lists.
 
 ```text
 *ConstructSignature*:
-    new TypeParametersopt ( ParameterListopt ) TypeAnnotationopt
+    new TypeParameters(opt) ( ParameterList(opt) ) TypeAnnotation(opt)
 ```
 
 The type parameters, parameter list, and return type of a construct signature are subject to the same rules
@@ -883,7 +883,7 @@ A method signature is shorthand for declaring a property of a function type.
 
 ```text
 MethodSignature:
-    PropertyName ?opt CallSignature
+    PropertyName ?(opt) CallSignature
 ```
 
 If the identifier is followed by a question mark, the property is optional. Otherwise, the property is
