--- a/en/ch04.md
+++ b/en/ch04.md
@@ -86,10 +86,10 @@ PropertyAssignment: ( Modified )
     SetAccessor
 
 GetAccessor:
-    get PropertyName ( ) TypeAnnotationopt { FunctionBody }
+    get PropertyName ( ) TypeAnnotation(opt) { FunctionBody }
 
 SetAccessor:
-    set PropertyName ( Identifier TypeAnnotationopt ) { FunctionBody }
+    set PropertyName ( Identifier TypeAnnotation(opt) ) { FunctionBody }
 ```
 
 The type of an object literal is an object type with the set of properties specified by the property
@@ -174,7 +174,7 @@ constructor.
 ```text
 CallExpression: ( Modified )
     ...
-    super ( ArgumentListopt )
+    super ( ArgumentList(opt) )
     super . IdentifierName
 ```
 
@@ -227,7 +227,7 @@ annotations, and a new compact form, called arrow function expressions, is intro
 
 ```text
 FunctionExpression: ( Modified )
-    function Identifieropt CallSignature { FunctionBody }
+    function Identifier(opt) CallSignature { FunctionBody }
 
 AssignmentExpression: ( Modified )
     ...
@@ -446,7 +446,7 @@ Function calls are extended from JavaScript to optionally include type arguments
 
 ```text
 Arguments: ( Modified )
-    TypeArgumentsopt ( ArgumentListopt )
+    TypeArguments(opt) ( ArgumentList(opt) )
 ```
 
 A function call takes one of the forms
