--- a/en/ch05.md
+++ b/en/ch05.md
@@ -9,10 +9,10 @@ Variable statements are extended to include optional type annotations.
 
 ```text
 VariableDeclaration: ( Modified )
-    Identifier TypeAnnotationopt Initialiseropt
+    Identifier TypeAnnotation(opt) Initialiser(opt)
 
 VariableDeclarationNoIn: ( Modified )
-    Identifier TypeAnnotationopt InitialiserNoInopt
+    Identifier TypeAnnotation(opt) InitialiserNoIn(opt)
 
 TypeAnnotation:
     : Type
