--- a/en/ch06.md
+++ b/en/ch06.md
@@ -10,7 +10,7 @@ implementation.
 
 ```text
 FunctionDeclaration: ( Modified )
-    FunctionOverloadsopt FunctionImplementation
+    FunctionOverloads(opt) FunctionImplementation
 
 FunctionOverloads:
     FunctionOverload
