--- a/en/ch07.md
+++ b/en/ch07.md
@@ -21,7 +21,7 @@ containing module.
 
 ```text
 InterfaceDeclaration:
-    interface Identifier TypeParametersopt InterfaceExtendsClauseopt ObjectType
+    interface Identifier TypeParameters(opt) InterfaceExtendsClause(opt) ObjectType
 
 InterfaceExtendsClause:
     extends ClassOrInterfaceTypeList
