--- a/en/ch08.md
+++ b/en/ch08.md
@@ -14,7 +14,7 @@ inheritance, allowing derived classes to extend and specialize base classes.
 
 ```text
 ClassDeclaration:
-    class Identifier TypeParametersopt ClassHeritage { ClassBody }
+    class Identifier TypeParameters(opt) ClassHeritage { ClassBody }
 ```
 
 A *ClassDeclaration* declares a ***class type*** and a ***constructor function***, both with the name given by
@@ -79,7 +79,7 @@ which to validate the class provides an implementation.
 
 ```text
 ClassHeritage:
-    ClassExtendsClauseopt ImplementsClauseopt
+    ClassExtendsClause(opt) ImplementsClause(opt)
 
 ClassExtendsClause:
     extends ClassType
@@ -140,7 +140,7 @@ in the body of a class—they must be placed in the constructor or in members.
 
 ```text
 ClassBody:
-    ClassElementsopt
+    ClassElements(opt)
 
 ClassElements:
     ClassElement
@@ -350,17 +350,17 @@ A constructor declaration declares the constructor function of a class.
 
 ```text
 ConstructorDeclaration:
-    ConstructorOverloadsopt ConstructorImplementation
+    ConstructorOverloads(opt) ConstructorImplementation
 
 ConstructorOverloads:
     ConstructorOverload
     ConstructorOverloads ConstructorOverload
 
 ConstructorOverload:
-    PublicOrPrivateopt constructor ( ParameterListopt ) ;
+    PublicOrPrivate(opt) constructor ( ParameterList(opt) ) ;
 
 ConstructorImplementation:
-    PublicOrPrivateopt constructor ( ParameterListopt ) { FunctionBody }
+    PublicOrPrivate(opt) constructor ( ParameterList(opt) ) { FunctionBody }
 ```
 
 A class may contain at most one constructor declaration. If a class contains no constructor declaration, an
@@ -533,7 +533,7 @@ A member variable declaration declares an instance member variable or a static m
 
 ```text
 MemberVariableDeclaration:
-    PublicOrPrivateopt staticopt PropertyName TypeAnnotationopt Initialiseropt ;
+    PublicOrPrivate(opt) static(opt) PropertyName TypeAnnotation(opt) Initialiser(opt) ;
 ```
 
 The type associated with a member variable declaration is determined in the same manner as an ordinary
@@ -590,17 +590,17 @@ A member function declaration declares an instance member function or a static m
 
 ```text
 MemberFunctionDeclaration:
-    MemberFunctionOverloadsopt MemberFunctionImplementation
+    MemberFunctionOverloads(opt) MemberFunctionImplementation
 
 MemberFunctionOverloads:
     MemberFunctionOverload
     MemberFunctionOverloads MemberFunctionOverload
 
 MemberFunctionOverload:
-    PublicOrPrivateopt staticopt PropertyName CallSignature ;
+    PublicOrPrivate(opt) static(opt) PropertyName CallSignature ;
 
 MemberFunctionImplementation:
-    PublicOrPrivateopt staticopt PropertyName CallSignature { FunctionBody }
+    PublicOrPrivate(opt) static(opt) PropertyName CallSignature { FunctionBody }
 ```
 
 A member function declaration is processed in the same manner as an ordinary function declaration
@@ -677,8 +677,8 @@ A member accessor declaration declares an instance member accessor or a static m
 
 ```text
 MemberAccessorDeclaration:
-    PublicOrPrivateopt staticopt GetAccessor
-    PublicOrPrivateopt staticopt SetAccessor
+    PublicOrPrivate(opt) static(opt) GetAccessor
+    PublicOrPrivate(opt) static(opt) SetAccessor
 ```
 
 Get and set accessors are processed in the same manner as in an object literal (section 4.5), except that a
