--- a/en/ch09.md
+++ b/en/ch09.md
@@ -9,7 +9,7 @@ An enum declaration declares an ***enum type*** and an ***enum object*** in the 
 
 ```text
 EnumDeclaration:
-    enum Identifier { EnumBodyopt }
+    enum Identifier { EnumBody(opt) }
 ```
 
 The enum type and enum object declared by an *EnumDeclaration* both have the name given by the
@@ -55,9 +55,9 @@ enum declaration.
 
 ```text
 EnumBody:
-    ConstantEnumMembers ,opt
-    ConstantEnumMembers , EnumMemberSections ,opt
-    EnumMemberSections ,opt
+    ConstantEnumMembers ,(opt)
+    ConstantEnumMembers , EnumMemberSections ,(opt)
+    EnumMemberSections ,(opt)
 
 ConstantEnumMembers:
     PropertyName
