--- a/en/ch10.md
+++ b/en/ch10.md
@@ -79,7 +79,7 @@ instance.
 
 ```text
 ModuleBody:
-    ModuleElementsopt
+    ModuleElements(opt)
 
 ModuleElements:
     ModuleElement
@@ -87,13 +87,13 @@ ModuleElements:
 
 ModuleElement:
     Statement
-    exportopt VariableDeclaration
-    exportopt FunctionDeclaration
-    exportopt ClassDeclaration
-    exportopt InterfaceDeclaration
-    exportopt EnumDeclaration
-    exportopt ModuleDeclaration
-    exportopt ImportDeclaration
+    export(opt) VariableDeclaration
+    export(opt) FunctionDeclaration
+    export(opt) ClassDeclaration
+    export(opt) InterfaceDeclaration
+    export(opt) EnumDeclaration
+    export(opt) ModuleDeclaration
+    export(opt) ImportDeclaration
 ```
 
 Each module body has a declaration space for local variables (including functions, modules, class
