--- a/en/ch11.md
+++ b/en/ch11.md
@@ -19,7 +19,7 @@ SourceFile:
     DeclarationSourceFile
 
 ImplementationSourceFile:
-    ImplementationElementsopt
+    ImplementationElements(opt)
 
 ImplementationElements:
     ImplementationElement
@@ -28,22 +28,22 @@ ImplementationElements:
 ImplementationElement:
     ModuleElement
     ExportAssignment
-    exportopt ExternalImportDeclaration
-    exportopt AmbientDeclaration
+    export(opt) ExternalImportDeclaration
+    export(opt) AmbientDeclaration
 
 DeclarationSourceFile:
-    DeclarationElementsopt
+    DeclarationElements(opt)
 
 DeclarationElements:
     DeclarationElement
     DeclarationElements DeclarationElement
 
 DeclarationElement:
-    exportopt InterfaceDeclaration
-    exportopt ImportDeclaration
+    export(opt) InterfaceDeclaration
+    export(opt) ImportDeclaration
     ExportAssignment
-    exportopt ExternalImportDeclaration
-    exportopt AmbientDeclaration
+    export(opt) ExternalImportDeclaration
+    export(opt) AmbientDeclaration
 ```
 
 When a TypeScript program is compiled, all of the program's source files are processed together.
