--- a/en/ch12.md
+++ b/en/ch12.md
@@ -29,7 +29,7 @@ An ambient variable declaration introduces a variable in the containing declarat
 
 ```text
 AmbientVariableDeclaration:
-    var Identifier TypeAnnotationopt ;
+    var Identifier TypeAnnotation(opt) ;
 ```
 
 An ambient variable declaration may optionally include a type annotation. If no type annotation is
@@ -61,10 +61,10 @@ module.
 
 ```text
 AmbientClassDeclaration:
-    class Identifier TypeParametersopt ClassHeritage { AmbientClassBody }
+    class Identifier TypeParameters(opt) ClassHeritage { AmbientClassBody }
 
 AmbientClassBody:
-    AmbientClassBodyElementsopt
+    AmbientClassBodyElements(opt)
 
 AmbientClassBodyElements:
     AmbientClassBodyElement
@@ -76,11 +76,11 @@ AmbientClassBodyElement:
     IndexSignature
 
 AmbientConstructorDeclaration:
-    constructor ( ParameterListopt ) ;
+    constructor ( ParameterList(opt) ) ;
 
 AmbientPropertyMemberDeclaration:
-    PublicOrPrivateopt staticopt PropertyName TypeAnnotationopt ;
-    PublicOrPrivateopt staticopt PropertyName CallSignature ;
+    PublicOrPrivate(opt) static(opt) PropertyName TypeAnnotation(opt) ;
+    PublicOrPrivate(opt) static(opt) PropertyName CallSignature ;
 ```
 
 ### 12.1.4 Ambient Enum Declarations
@@ -89,10 +89,10 @@ An ambient enum declaration declares an enum type and an enum object in the cont
 
 ```text
 AmbientEnumDeclaration:
-    enum Identifier { AmbientEnumBodyopt }
+    enum Identifier { AmbientEnumBody(opt) }
 
 AmbientEnumBody:
-    AmbientEnumMemberList ,opt
+    AmbientEnumMemberList ,(opt)
 
 AmbientEnumMemberList:
     AmbientEnumMember
@@ -115,20 +115,20 @@ AmbientModuleDeclaration:
     module IdentifierPath { AmbientModuleBody }
 
 AmbientModuleBody:
-    AmbientModuleElementsopt
+    AmbientModuleElements(opt)
 
 AmbientModuleElements:
     AmbientModuleElement
     AmbientModuleElements AmbientModuleElement
 
 AmbientModuleElement:
-    exportopt AmbientVariableDeclaration
-    exportopt AmbientFunctionDeclaration
-    exportopt AmbientClassDeclaration
-    exportopt InterfaceDeclaration
-    exportopt AmbientEnumDeclaration
-    exportopt AmbientModuleDeclaration
-    exportopt ImportDeclaration
+    export(opt) AmbientVariableDeclaration
+    export(opt) AmbientFunctionDeclaration
+    export(opt) AmbientClassDeclaration
+    export(opt) InterfaceDeclaration
+    export(opt) AmbientEnumDeclaration
+    export(opt) AmbientModuleDeclaration
+    export(opt) ImportDeclaration
 ```
 
 Except for ImportDeclarations, *AmbientModuleElements* always declare exported entities regardless of
@@ -145,7 +145,7 @@ AmbientExternalModuleDeclaration:
     module StringLiteral { AmbientExternalModuleBody }
 
 AmbientExternalModuleBody:
-    AmbientExternalModuleElementsopt
+    AmbientExternalModuleElements(opt)
 
 AmbientExternalModuleElements:
     AmbientExternalModuleElement
@@ -154,7 +154,7 @@ AmbientExternalModuleElements:
 AmbientExternalModuleElement:
     AmbientModuleElement
     ExportAssignment
-    exportopt ExternalImportDeclaration
+    export(opt) ExternalImportDeclaration
 ```
 
 An *ExternalImportDeclaration* in an *AmbientExternalModuleDeclaration* may reference other external
