--- a/en/ch01.md
+++ b/en/ch01.md
@@ -58,7 +58,7 @@ function f(s: string) {
     return s;
 }
 
-f({}); // Error
+f({});      // Error
 f("hello"); // Ok
 ```
 
@@ -118,7 +118,7 @@ JavaScript programmers often use closures to express event handlers and other as
 in which another software component, such as the DOM, will call back into JavaScript through a handler
 function.
 
-TypeScript function types make it possible for programmers to express the expected signature of a
+TypeScript function types make it possible for programmers to express the expected *signature* of a
 function. A function signature is a sequence of parameter types plus a return type. The following example
 uses function types to express the callback signature requirements of an asynchronous voting mechanism.
 
@@ -150,7 +150,7 @@ Section 3.7.2 provides additional information about function types.
 ## 1.3 Object Types
 
 TypeScript programmers use object types to declare their expectations of object behavior. The following
-code uses an object type literal to specify the return type of the `MakePoint` function.
+code uses an *object type literal* to specify the return type of the `MakePoint` function.
 
 ```typescript
 var MakePoint: () => {
@@ -158,7 +158,7 @@ var MakePoint: () => {
 };
 ```
 
-Programmers can give names to object types; we call named object types interfaces. For example, in the
+Programmers can give names to object types; we call named object types *interfaces*. For example, in the
 following code, an interface declares one required field (name) and one optional field (favoriteColor).
 
 ```typescript
@@ -230,13 +230,12 @@ var nope: () => number = sameType; // Error: type mismatch
 
 We mentioned above that the `$` function behaves differently depending on the type of its parameter. So
 far, our jQuery typing only captures one of these behaviors: return an object of type `JQuery` when passed
-a string. To specify multiple behaviors, TypeScript supports overloading of function signatures in object
+a string. To specify multiple behaviors, TypeScript supports *overloading* of function signatures in object
 types. For example, we can add an additional call signature to the `JQueryStatic` interface.
 
 ```typescript
 (ready: () => any): any;
 ```
-
 
 This signature denotes that a function may be passed as the parameter of the `$` function. When a
 function is passed to `$`, the jQuery library will invoke that function when a DOM document is ready.
@@ -252,7 +251,7 @@ Section 3.3 provides additional information about object types.
 
 ## 1.4 Structural Subtyping
 
-Object types are compared structurally. For example, in the code fragment below, class `CPoint` matches
+Object types are compared *structurally*. For example, in the code fragment below, class `CPoint` matches
 interface `Point` because `CPoint` has all of the required members of `Point`. A class may optionally declare
 that it implements an interface, so that the compiler will check the declaration for structural compatibility.
 The example also illustrates that an object type can match the type inferred from an object literal, as long
@@ -443,7 +442,7 @@ Section 8 provides additional information about classes.
 
 ## 1.7 Enum Types
 
-TypeScript enables programmers to summarize a set of numeric constants as an enum type. The example
+TypeScript enables programmers to summarize a set of numeric constants as an *enum type*. The example
 below creates an enum type to represent operators in a calculator application.
 
 ```typescript
@@ -507,7 +506,7 @@ statement, for example by building a jump table indexed by case value.
 
 An important goal of TypeScript is to provide accurate and straightforward types for existing JavaScript
 programming patterns. To that end, TypeScript includes generic types, discussed in the next section, and
-overloading on string parameters, the topic of this section.
+*overloading on string parameters*, the topic of this section.
 
 JavaScript programming interfaces often include functions whose behavior is discriminated by a string
 constant passed to the function. The Document Object Model makes heavy use of this pattern. For
@@ -531,7 +530,7 @@ Section 3.7.2.4 provides details on how to use string literals in function signa
 
 ## 1.9 Generic Types and Functions
 
-Like overloading on string parameters, generic types make it easier for TypeScript to accurately capture
+Like overloading on string parameters, *generic types* make it easier for TypeScript to accurately capture
 the behavior of JavaScript libraries. Because they enable type information to flow from client code,
 through library code, and back into client code, generic types may do more than any other TypeScript
 feature to support detailed API descriptions.
@@ -547,7 +546,7 @@ interface Array<T> {
 }
 ```
 
-Interface definitions, like the one above, can have one or more type parameters. In this case the `Array`
+Interface definitions, like the one above, can have one or more *type parameters*. In this case the `Array`
 interface has a single parameter, `T`, that defines the element type for the array. The `reverse` method
 returns an array with the same element type. The sort method takes an optional parameter, `compareFn`,
 whose type is a function that takes two parameters of type `T` and returns a number. Finally, sort returns
@@ -614,7 +613,7 @@ Classes and interfaces support large-scale JavaScript development by providing a
 describing how to use a software component that can be separated from that component's
 implementation. TypeScript enforces encapsulation of implementation in classes at design time (by
 restricting use of private members), but cannot enforce encapsulation at runtime because all object
-properties are accessible at runtime. Future versions of JavaScript may provide private names which would
+properties are accessible at runtime. Future versions of JavaScript may provide *private names* which would
 enable runtime enforcement of private members.
 
 In the current version of JavaScript, the only way to enforce encapsulation at runtime is to use the module
@@ -635,12 +634,12 @@ The following example illustrates the JavaScript module pattern.
 })(MessageModule);
 ```
 
-This example illustrates the two essential elements of the module pattern: a module closure and a module
-object. The module closure is a function that encapsulates the module's implementation, in this case the
+This example illustrates the two essential elements of the module pattern: a *module closure* and a *module
+object*. The module closure is a function that encapsulates the module's implementation, in this case the
 variable `key` and the function `sendMessage`. The module object contains the exported variables and
 functions of the module. Simple modules may create and return the module object. The module above
 takes the module object as a parameter, `exports`, and adds the `sendMessage` property to the module
-object. This augmentation approach simplifies dynamic loading of modules and also supports separation
+object. This *augmentation* approach simplifies dynamic loading of modules and also supports separation
 of module code into multiple files.
 
 The example assumes that an outer lexical scope defines the functions `generateSecretKey` and
@@ -682,7 +681,7 @@ same name for the interface as for the initialized variable because in TypeScrip
 names do not conflict: each lexical scope contains a variable declaration space and type declaration space
 (see section 2.3 for more details).
 
-Module `M` is an example of an internal module, because it is nested within the global module (see
+Module `M` is an example of an *internal* module, because it is nested within the *global* module (see
 section 10 for more details). The TypeScript compiler emits the following JavaScript code for this module.
 
 ```typescript
@@ -699,7 +698,7 @@ var M;
 In this case, the compiler assumes that the module object resides in global variable `M`, which may or may
 not have been initialized to the desired module object.
 
-TypeScript also supports external modules, which are files that contain top-level export and import
+TypeScript also supports *external* modules, which are files that contain top-level *export* and *import*
 directives. For this type of module the TypeScript compiler will emit code whose module closure and
 module object implementation vary according to the specified dynamic loading system, for example, the
 Asynchronous Module Definition system.
