--- a/en/ch02.md
+++ b/en/ch02.md
@@ -22,7 +22,7 @@ CallExpression: ( Modified )
 The `( Modified )` annotation indicates that an existing grammar production is being replaced, and the `...`
 references the contents of the original grammar production.
 
-Similar to the ECMAScript grammar, if the phrase "[no LineTerminator here]" appears in the right-hand side of
+Similar to the ECMAScript grammar, if the phrase "`[no LineTerminator here]`" appears in the right-hand side of
 a production of the syntactic grammar, it indicates that the production is not a match if a *LineTerminator*
 occurs in the input stream at the indicated position.
 
@@ -139,9 +139,9 @@ permitted, provided module `X` contains only interface or module declarations at
 
 ```typescript
 module M {
-    module X { ... } // Namespace
+    module X { ... }    // Namespace
     interface X { ... } // Type
-    var X; // Member
+    var X;              // Member
 }
 ```
 
@@ -153,8 +153,8 @@ permitted:
 
 ```typescript
 class C {
-    x: number; // Instance member
-    static x: string; // Static member
+    x: number;          // Instance member
+    static x: string;   // Static member
 }
 ```
 
@@ -192,7 +192,7 @@ parameters are considered and other entities in scope are ignored.
 When an identifier is resolved as a *ModuleName* (section 3.6.2), only modules are considered and other
 entities in scope are ignored.
 
-When an identifier is resolved as a PrimaryExpression (section 4.3), only instantiated modules (section
+When an identifier is resolved as a *PrimaryExpression* (section 4.3), only instantiated modules (section
 10.1), classes, enums, functions, variables, and parameters are considered and other entities in scope are
 ignored.
 
