--- a/en/ch10.md
+++ b/en/ch10.md
@@ -27,7 +27,7 @@ which a module object instance is created, whereas a non-instantiated module is 
 generated.
 
 When a module identifier is referenced as a *ModuleName* (section 3.6.2) it denotes a container of module
-and type names, and when a module identifier is referenced as a PrimaryExpression (section 4.3) it
+and type names, and when a module identifier is referenced as a *PrimaryExpression* (section 4.3) it
 denotes the singleton module instance. For example:
 
 ```typescript
@@ -43,12 +43,12 @@ var x2 = m.a;   // Same as M.a
 var q: m.P;     // Error
 ```
 
-Above, when `M` is used as a PrimaryExpression it denotes an object instance with a single member `a` and
+Above, when `M` is used as a *PrimaryExpression* it denotes an object instance with a single member `a` and
 when `M` is used as a *ModuleName* it denotes a container with a single type member `P`. The final line in
 the example is an error because `m` is a variable which cannot be referenced in a type name.
 
 If the declaration of `M` above had excluded the exported variable `a`, `M` would be a non-instantiated
-module and it would be an error to reference `M` as a PrimaryExpression.
+module and it would be an error to reference `M` as a *PrimaryExpression*.
 
 An internal module declaration that specifies an *IdentifierPath* with more than one identifier is equivalent
 to a series of nested single-identifier internal module declarations where all but the outermost are
@@ -353,7 +353,7 @@ An import statement generates code of the form
 var <Alias> = <EntityName>;
 ```
 
-This code is emitted only if the imported entity is referenced as a PrimaryExpression somewhere in the
+This code is emitted only if the imported entity is referenced as a *PrimaryExpression* somewhere in the
 body of the importing module. If an imported entity is referenced only as a *TypeName* or *ModuleName*,
 nothing is emitted. This ensures that types declared in one internal module can be referenced through an
 import alias in another internal module with no run-time overhead.
