--- a/en/ch11.md
+++ b/en/ch11.md
@@ -292,7 +292,7 @@ exports.message = function(s) {
 An external import declaration is represented in the generated JavaScript as a variable initialized by a call
 to the `require` function provided by the module system host. A variable declaration and `require` call is
 emitted for a particular imported module only if the imported module, or a local alias (section 10.3) that
-references the imported module, is referenced as a PrimaryExpression somewhere in the body of the
+references the imported module, is referenced as a *PrimaryExpression* somewhere in the body of the
 importing module. If an imported module is referenced only as a *ModuleName* or *TypeQueryExpression*,
 nothing is emitted.
 
@@ -370,7 +370,7 @@ define(["require", "exports"], function(require, exports) {
 The special `require` and `exports` dependencies are always present. Additional entries are added to the
 dependencies array and the parameter list as required to represent imported external modules. Similar to
 the code generation for CommonJS Modules, a dependency entry is generated for a particular imported
-module only if the imported module is referenced as a PrimaryExpression somewhere in the body of the
+module only if the imported module is referenced as a *PrimaryExpression* somewhere in the body of the
 importing module. If an imported module is referenced only as a *ModuleName*, no dependency is
 generated for that module.
 
