--- a/en/ch03.md
+++ b/en/ch03.md
@@ -2,14 +2,14 @@
 
 TypeScript adds optional static types to JavaScript. Types are used to place static constraints on program
 entities such as functions, variables, and properties so that compilers and development tools can offer
-better verification and assistance during software development. TypeScript's static compile-time type
-system closely models the dynamic run-time type system of JavaScript, allowing programmers to
+better verification and assistance during software development. TypeScript's *static* compile-time type
+system closely models the *dynamic* run-time type system of JavaScript, allowing programmers to
 accurately express the type relationships that are expected to exist when their programs run and have
 those assumptions pre-validated by the TypeScript compiler. TypeScript's type analysis occurs entirely at
 compile-time and adds no run-time overhead to program execution.
 
 All types in TypeScript are subtypes of a single top type called the Any type. The any keyword references
-this type. The Any type is the one type that can represent any JavaScript value with no constraints. All
+this type. The Any type is the one type that can represent *any* JavaScript value with no constraints. All
 other types are categorized as ***primitive types***, ***object types***, or ***type parameters***.
 These types introduce various static constraints on their values.
 
@@ -17,7 +17,7 @@ The primitive types are the Number, Boolean, String, Void, Null, and Undefined t
 defined enum types. The number, boolean, string, and void keywords reference the Number, Boolean,
 String, and Void primitive types respectively. The Void type exists purely to indicate the absence of a
 value, such as in a function with no return value. It is not possible to explicitly reference the Null and
-Undefined types—only values of those types can be referenced, using the null and undefined literals.
+Undefined types—only *values* of those types can be referenced, using the null and undefined literals.
 
 The object types are all class, interface, array, and literal types. Class and interface types are introduced
 through class and interface declarations and are referenced by the name given to them in their
@@ -313,11 +313,11 @@ type arguments. Omitting a constraint corresponds to specifying the empty object
 parameters declared in a particular type parameter list may not be referenced in constraints in that type
 parameter list.
 
-The ***base constraint*** of a type parameter T is defined as follows:
+The ***base constraint*** of a type parameter `T` is defined as follows:
 
-* If T has no declared constraint, T's base constraint is the empty object type {}.
-* If T's declared constraint is a type parameter, T's base constraint is that of the type parameter.
-* Otherwise, T's base constraint is T's declared constraint.
+* If `T` has no declared constraint, `T`'s base constraint is the empty object type {}.
+* If `T`'s declared constraint is a type parameter, `T`'s base constraint is that of the type parameter.
+* Otherwise, `T`'s base constraint is `T`'s declared constraint.
 
 
 In the example
@@ -391,7 +391,7 @@ those created by interface declarations.
 Named types are referenced through ***type references*** (section 3.6.2) that specify a type name and, if
 applicable, the type arguments to be substituted for the type parameters of the named type.
 
-Named types are technically not types—only references to named types are. This distinction is particularly
+Named types are technically not types—only *references* to named types are. This distinction is particularly
 evident with generic types: Generic types are "templates" from which multiple actual types can be created
 by writing type references that supply type arguments to substitute in place of the generic type's type
 parameters. This substitution process is known as ***instantiating*** a generic type. Only once a generic type
@@ -443,10 +443,10 @@ writing type literals which compose other types into new types.
 
 ```text
 Type:
-    *PredefinedType*
-    *TypeReference*
-    *TypeQuery*
-    *TypeLiteral*
+    PredefinedType
+    TypeReference
+    TypeQuery
+    TypeLiteral
 ```
 
 ### 3.6.1 Predefined Types
@@ -455,7 +455,7 @@ The any, number, boolean, string, and void keywords reference the Any type and t
 String, and Void primitive types respectively.
 
 ```text
-*PredefinedType*:
+PredefinedType:
     any
     number
     boolean
@@ -489,15 +489,15 @@ a generic type must be followed by a list of *TypeArguments* (section 3.4.2).
 
 Resolution of a *TypeName* consisting of a single identifier is described in section 2.4.
 
-Resolution of a *TypeName* of the form M.N, where M is a *ModuleName* and N is an *Identifier*, proceeds by
-first resolving the module name M. If the resolution of M is successful and the resulting module contains
-an exported named type N, then M.N refers to that member. Otherwise, M.N is undefined.
+Resolution of a *TypeName* of the form *M.N*, where *M* is a *ModuleName* and *N* is an *Identifier*, proceeds by
+first resolving the module name *M*. If the resolution of *M* is successful and the resulting module contains
+an exported named type *N*, then *M.N* refers to that member. Otherwise, *M.N* is undefined.
 
 Resolution of a *ModuleName* consisting of a single identifier is described in section 2.4.
 
-Resolution of a *ModuleName* of the form M.N, where M is a *ModuleName* and N is an *Identifier*, proceeds
-by first resolving the module name M. If the resolution of M is successful and the resulting module
-contains an exported module member N, then M.N refers to that member. Otherwise, M.N is undefined.
+Resolution of a *ModuleName* of the form *M.N*, where *M* is a *ModuleName* and *N* is an *Identifier*, proceeds
+by first resolving the module name *M*. If the resolution of *M* is successful and the resulting module
+contains an exported module member *N*, then *M.N* refers to that member. Otherwise, *M.N* is undefined.
 
 A type reference to a generic type is required to specify exactly one type argument for each type
 parameter of the referenced generic type, and each type argument must be assignable to (section 3.8.4)
@@ -551,7 +551,7 @@ TypeQueryExpression:
     TypeQueryExpression . IdentifierName
 ```
 
-A type query consists of the keyword typeof followed by an expression. The expression is restricted to a
+A type query consists of the keyword `typeof` followed by an expression. The expression is restricted to a
 single identifier or a sequence of identifiers separated by periods. The expression is processed as an
 identifier expression (section 4.3) or property access expression (section 4.10), the widened type (section
 3.9) of which becomes the result. Similar to other static typing constructs, type queries are erased from
@@ -826,9 +826,9 @@ signature last. This is because overload resolution (section 4.12.1) processes t
 order and picks the first one that matches.
 
 Every specialized call or construct signature in an object type must be assignable to at least one non-
-specialized call or construct signature in the same object type (where a call signature A is considered
-assignable to another call signature B if an object type containing only A would be assignable to an object
-type containing only B). For example, the `createElement` property in the example above is of a type that
+specialized call or construct signature in the same object type (where a call signature *A* is considered
+assignable to another call signature *B* if an object type containing only *A* would be assignable to an object
+type containing only *B*). For example, the `createElement` property in the example above is of a type that
 contains three specialized signatures, all of which are assignable to the non-specialized signature in the
 type.
 
@@ -839,7 +839,7 @@ operator (section 4.11) to an instance of the containing type. A type may overlo
 defining multiple construct signatures with different parameter lists.
 
 ```text
-*ConstructSignature*:
+ConstructSignature:
     new TypeParameters(opt) ( ParameterList(opt) ) TypeAnnotation(opt)
 ```
 
@@ -862,14 +862,14 @@ There are two kinds of index signatures:
 
 * ***String index*** signatures, specified using index type string, define type constraints for all
 properties and numeric index signatures in the containing type. Specifically, in a type with a string
-index signature of type T, all properties and numeric index signatures must have types that are
-assignable to T.
+index signature of type *T*, all properties and numeric index signatures must have types that are
+assignable to *T*.
 * ***Numeric index signatures***, specified using index type number, define type constraints for all
 numerically named properties in the containing type. Specifically, in a type with a numeric index
-signature of type T, all numerically named properties must have types that are assignable to T.
+signature of type *T*, all numerically named properties must have types that are assignable to *T*.
 
 A ***numerically named property*** is a property whose name is a valid numeric literal. Specifically, a
-property with a name N for which ToNumber(N) is not NaN, where ToNumber is the abstract operation
+property with a name *N* for which ToNumber(*N*) is not NaN, where ToNumber is the abstract operation
 defined in ECMAScript specification.
 
 An object type can contain at most one string index signature and one numeric index signature.
@@ -901,7 +901,7 @@ is equivalent to the property declaration
 PropName : { < TypeParamList > ( ParamList ) : ReturnType }
 ```
 
-A literal type may overload a method by declaring multiple method signatures with the same name but
+A literal type may ***overload*** a method by declaring multiple method signatures with the same name but
 differing parameter lists. Overloads must either all be required (question mark omitted) or all be optional
 (question mark included). A set of overloaded method signatures correspond to a declaration of a single
 property with a type composed from an equivalent set of call signatures. Specifically
