Fix a table in ch03

--- a/en/ch03.md
+++ b/en/ch03.md
@@ -721,6 +721,8 @@ signature formed by replacing each type parameter with its corresponding type ar
 
 Some examples of call signatures with type parameters:
 
+| Type parameter | Description |
+| ---- | ---- |
 | <T>(x: T): T | A function taking an argument of any type, returning a value of that same type. |
 | <T>(x: T, y: T): T[] | A function taking two values of the same type, returning an array of that type. |
 | <T, U>(x: T, y: U): { x: T; y: U; } | A function taking two arguments of different types, returning an object with properties `x` and `y` of those types. |
