--- a/en/ch03.md
+++ b/en/ch03.md
@@ -313,11 +313,11 @@ type arguments. Omitting a constraint corresponds to specifying the empty object
 parameters declared in a particular type parameter list may not be referenced in constraints in that type
 parameter list.
 
-The ***base constraint*** of a type parameter `T` is defined as follows:
+The ***base constraint*** of a type parameter *T* is defined as follows:
 
-* If `T` has no declared constraint, `T`'s base constraint is the empty object type {}.
-* If `T`'s declared constraint is a type parameter, `T`'s base constraint is that of the type parameter.
-* Otherwise, `T`'s base constraint is `T`'s declared constraint.
+* If *T* has no declared constraint, *T*'s base constraint is the empty object type {}.
+* If *T*'s declared constraint is a type parameter, *T*'s base constraint is that of the type parameter.
+* Otherwise, *T*'s base constraint is *T*'s declared constraint.
 
 
 In the example
@@ -971,22 +971,22 @@ compatibility relationships, as well as in the type checking of property accesse
 operations (section 4.11), and function calls (section 4.12).
 
 
-The apparent type of a type T is defined as follows:
+The apparent type of a type *T* is defined as follows:
 
-* If T is the primitive type Number, Boolean, or String, the apparent type of T is the augmented
+* If *T* is the primitive type Number, Boolean, or String, the apparent type of *T* is the augmented
 form (as defined below) of the global interface type `Number`, `Boolean`, or `String`.
-* if T is an enum type, the apparent type of T is the augmented form of the global interface type
+* if *T* is an enum type, the apparent type of *T* is the augmented form of the global interface type
 `Number`.
-* If T is an object type, the apparent type of T is the augmented form of T.
-* If T is a type parameter, the apparent type of T is the apparent type of T's base constraint (section
+* If *T* is an object type, the apparent type of *T* is the augmented form of *T*.
+* If *T* is a type parameter, the apparent type of *T* is the apparent type of *T*'s base constraint (section
 3.4.1).
-* Otherwise, the apparent type of T is T itself.
+* Otherwise, the apparent type of *T* is *T* itself.
 
 
-The augmented form of an object type T adds to T those members of the global interface type `Object`
-that aren't hidden by members in T. Furthermore, if T has one or more call or construct signatures, the
-augmented form of T adds to T the members of the global interface type `Function` that aren't hidden by
-members in T. Members in T hide `Object` or `Function` interface members in the following manner:
+The augmented form of an object type *T* adds to *T* those members of the global interface type `Object`
+that aren't hidden by members in *T*. Furthermore, if *T* has one or more call or construct signatures, the
+augmented form of *T* adds to *T* the members of the global interface type `Function` that aren't hidden by
+members in *T*. Members in *T* hide `Object` or `Function` interface members in the following manner:
 
 * A property hides an `Object` or `Function` property with the same name.
 * A call signature hides an `Object` or `Function` call signature with the same number of parameters
@@ -1062,37 +1062,37 @@ types with identical sets of members once the type arguments `X` and `Y` are sub
 
 ### 3.8.3 Subtypes and Supertypes
 
-S is a ***subtype*** of a type T, and T is a ***supertype*** of S, if one of the following is true, where S' denotes the
-apparent type (section 3.8.1) of S:
+*S* is a ***subtype*** of a type *T*, and *T* is a ***supertype*** of *S*, if one of the following is true, where *S*' denotes the
+apparent type (section 3.8.1) of *S*:
 
-* S and T are identical types.
-* T is the Any type.
-* S is the Undefined type.
-* S is the Null type and T is not the Undefined type.
-* S is an enum type and T is the primitive type Number.
-* S is a string literal type and T is the primitive type String.
-* S and T are type parameters, and S is directly or indirectly constrained to T.
-* S' and T are object types and, for each member M in T, one of the following is true:
-    * M is a property and S' contains a property N where
-        * M and N have the same name,
-        * the type of N is a subtype of that of M,
-        * M and N are both public, or M and N are both private and originate in the same
+* *S* and *T* are identical types.
+* *T* is the Any type.
+* *S* is the Undefined type.
+* *S* is the Null type and *T* is not the Undefined type.
+* *S* is an enum type and *T* is the primitive type Number.
+* *S* is a string literal type and *T* is the primitive type String.
+* *S* and *T* are type parameters, and *S* is directly or indirectly constrained to *T*.
+* *S*' and *T* are object types and, for each member *M* in *T*, one of the following is true:
+    * *M* is a property and *S*' contains a property *N* where
+        * *M* and *N* have the same name,
+        * the type of *N* is a subtype of that of *M*,
+        * *M* and *N* are both public, or *M* and *N* are both private and originate in the same
         declaration, and
-        * if M is a required property, N is also a required property.
-    * M is an optional property and S' contains no property of the same name as M.
-    * M is a non-specialized call or construct signature and S' contains a call or construct
-signature N where, when M and N are instantiated using type Any as the type argument
-for all type parameters declared by M and N (if any),
+        * if *M* is a required property, *N* is also a required property.
+    * *M* is an optional property and *S*' contains no property of the same name as *M*.
+    * *M* is a non-specialized call or construct signature and *S*' contains a call or construct
+signature *N* where, when *M* and *N* are instantiated using type Any as the type argument
+for all type parameters declared by *M* and *N* (if any),
         * the signatures are of the same kind (call or construct),
-        * M has a rest parameter or the number of non-optional parameters in N is less
-        than or equal to the total number of parameters in M,
+        * *M* has a rest parameter or the number of non-optional parameters in *N* is less
+        than or equal to the total number of parameters in *M*,
         * for parameter positions that are present in both signatures, each parameter type
-        in N is a subtype or supertype of the corresponding parameter type in M, and
-        * the result type of M is Void, or the result type of N is a subtype of that of M.
-    * M is a string index signature of type U and S' contains a string index signature of a type
-that is a subtype of U.
-    * M is a numeric index signature of type U and S' contains a string or numeric index
-signature of a type that is a subtype of U.
+        in *N* is a subtype or supertype of the corresponding parameter type in *M*, and
+        * the result type of *M* is Void, or the result type of *N* is a subtype of that of *M*.
+    * *M* is a string index signature of type *U* and *S*' contains a string index signature of a type
+that is a subtype of *U*.
+    * *M* is a numeric index signature of type *U* and *S*' contains a string or numeric index
+signature of a type that is a subtype of *U*.
 
 When comparing call or construct signatures, parameter names are ignored and rest parameters
 correspond to an unbounded expansion of optional parameters of the rest parameter element type.
@@ -1101,44 +1101,44 @@ Note that specialized call and construct signatures (section 3.7.2.4) are not si
 subtype and supertype relationships.
 
 Also note that type parameters are not considered object types. Thus, the only subtypes of a type
-parameter T are T itself and other type parameters that are directly or indirectly constrained to T.
+parameter *T* are *T* itself and other type parameters that are directly or indirectly constrained to *T*.
 
 ### 3.8.4 Assignment Compatibility
 
 Types are required to be assignment compatible in certain circumstances, such as expression and variable
 types in assignment statements and argument and parameter types in function calls.
 
-S is ***assignable*** to a type T, and T is ***assignable from*** S, if one of the following is true, where S' denotes
-the apparent type (section 3.8.1) of S:
+*S* is ***assignable*** to a type *T*, and *T* is ***assignable from*** *S*, if one of the following is true, where *S*' denotes
+the apparent type (section 3.8.1) of *S*:
 
-* S and T are identical types.
-* S or T is the Any type.
-* S is the Undefined type.
-* S is the Null type and T is not the Undefined type.
-* S or T is an enum type and the other is the primitive type Number.
-* S is a string literal type and T is the primitive type String.
-* S and T are type parameters, and S is directly or indirectly constrained to T.
-* S' and T are object types and, for each member M in T, one of the following is true:
-    * M is a property and S' contains a property N where
-        * M and N have the same name,
-        * the type of N is assignable to that of M,
-        * M and N are both public, or M and N are both private and originate in the same
+* *S* and *T* are identical types.
+* *S* or *T* is the Any type.
+* *S* is the Undefined type.
+* *S* is the Null type and *T* is not the Undefined type.
+* *S* or *T* is an enum type and the other is the primitive type Number.
+* *S* is a string literal type and *T* is the primitive type String.
+* *S* and *T* are type parameters, and *S* is directly or indirectly constrained to *T*.
+* *S*' and *T* are object types and, for each member *M* in *T*, one of the following is true:
+    * *M* is a property and *S*' contains a property *N* where
+        * *M* and *N* have the same name,
+        * the type of *N* is assignable to that of *M*,
+        * *M* and *N* are both public, or *M* and *N* are both private and originate in the same
         declaration, and
-        * if M is a required property, N is also a required property.
-    * M is an optional property and S' contains no property of the same name as M.
-    * M is a non-specialized call or construct signature and S' contains a call or construct
-    signature N where, when M and N are instantiated using type Any as the type argument
-    for all type parameters declared by M and N (if any),
+        * if *M* is a required property, *N* is also a required property.
+    * *M* is an optional property and *S*' contains no property of the same name as *M*.
+    * *M* is a non-specialized call or construct signature and *S*' contains a call or construct
+    signature *N* where, when *M* and *N* are instantiated using type Any as the type argument
+    for all type parameters declared by *M* and *N* (if any),
         * the signatures are of the same kind (call or construct),
-        * M has a rest parameter or the number of non-optional parameters in N is less
-        than or equal to the total number of parameters in M,
+        * *M* has a rest parameter or the number of non-optional parameters in *N* is less
+        than or equal to the total number of parameters in *M*,
         * for parameter positions that are present in both signatures, each parameter type
-        in N is assignable to or from the corresponding parameter type in M, and
-        * the result type of M is Void, or the result type of N is assignable to that of M.
-    * M is a string index signature of type U and S' contains a string index signature of a type
-that is assignable to U.
-    * M is a numeric index signature of type U and S' contains a string or numeric index
-signature of a type that is assignable to U.
+        in *N* is assignable to or from the corresponding parameter type in *M*, and
+        * the result type of *M* is Void, or the result type of *N* is assignable to that of *M*.
+    * *M* is a string index signature of type *U* and *S*' contains a string index signature of a type
+that is assignable to *U*.
+    * *M* is a numeric index signature of type *U* and *S*' contains a string or numeric index
+signature of a type that is assignable to *U*.
 
 When comparing call or construct signatures, parameter names are ignored and rest parameters
 correspond to an unbounded expansion of optional parameters of the rest parameter element type.
@@ -1182,28 +1182,28 @@ satisfy the constraint of the type parameter, the inferred type argument is inst
 
 ### 3.8.6 Type Inference
 
-In certain contexts, inferences for a given set of type parameters are made from a type S, in which those
-type parameters do not occur, to another type T, in which those type parameters do occur. Inferences
+In certain contexts, inferences for a given set of type parameters are made from a type *S*, in which those
+type parameters do not occur, to another type *T*, in which those type parameters do occur. Inferences
 consist of a set of candidate type arguments collected for each of the type parameters. The inference
-process recursively relates S and T to gather as many inferences as possible:
+process recursively relates *S* and *T* to gather as many inferences as possible:
 
-* If T is one of the type parameters for which inferences are being made, S is added to the set of
+* If *T* is one of the type parameters for which inferences are being made, *S* is added to the set of
 inferences for that type parameter.
-* Otherwise, if S and T are object types, then for each member M in T:
-    * If M is a property and S contains a property N with the same name as M, inferences are
-made from the type of N to the type of M.
-    * If M is a call signature then for each call signature N in S, N is instantiated with the Any
+* Otherwise, if *S* and *T* are object types, then for each member *M* in *T*:
+    * If *M* is a property and *S* contains a property *N* with the same name as *M*, inferences are
+made from the type of *N* to the type of *M*.
+    * If *M* is a call signature then for each call signature *N* in *S*, *N* is instantiated with the Any
 type as an argument for each type parameter (if any) and inferences are made from
-parameter types in N to the corresponding parameter types in M for positions that are
-present in both signatures, and from the return type of N to the return type of M.
-    * If M is a construct signature then for each construct signature N in S, N is instantiated
+parameter types in *N* to the corresponding parameter types in *M* for positions that are
+present in both signatures, and from the return type of *N* to the return type of *M*.
+    * If *M* is a construct signature then for each construct signature *N* in *S*, *N* is instantiated
 with the Any type as an argument for each type parameter (if any) and inferences are
-made from parameter types in N to the corresponding parameter types in M for positions
-that are present in both signatures, and from the return type of N to the return type of M.
-    * If M is a string index signature and S contains a string index signature N, inferences are
-made from the type of N to the type of M.
-    * If M is a numeric index signature and S contains a numeric index signature N, inferences
-are made from the type of N to the type of M.
+made from parameter types in *N* to the corresponding parameter types in *M* for positions
+that are present in both signatures, and from the return type of *N* to the return type of *M*.
+    * If *M* is a string index signature and *S* contains a string index signature *N*, inferences are
+made from the type of *N* to the type of *M*.
+    * If *M* is a numeric index signature and *S* contains a numeric index signature *N*, inferences
+are made from the type of *N* to the type of *M*.
 
 
 ### 3.8.7 Recursive Types
@@ -1216,9 +1216,9 @@ interface A { next: A; }
 ```
 
 contains an infinitely nested sequence of `next` properties. Types such as this are perfectly valid but
-require special treatment when determining type relationships. Specifically, when comparing types S and T
+require special treatment when determining type relationships. Specifically, when comparing types *S* and *T*
 for a given relationship (identity, subtype, or assignability), the relationship in question is assumed to be
-true for every directly or indirectly nested occurrence of the same S and the same T (where same means
+true for every directly or indirectly nested occurrence of the same *S* and the same *T* (where same means
 originating in the same declaration and, if applicable, having identical type arguments). For example,
 consider the identity relationship between `A` above and `B` below:
 
@@ -1271,21 +1271,21 @@ references the type parameter but isn't simply the type parameter itself.
 A type is said to originate in an infinitely expanding type reference if it was created (by instantiation of a
 generic class or interface) from an infinitely expanding type reference (in that generic class or interface).
 
-When comparing two types S and T for identity (section 3.8.2), subtype (section 3.8.3), and assignability
+When comparing two types *S* and *T* for identity (section 3.8.2), subtype (section 3.8.3), and assignability
 (section 3.8.4) relationships, if either type originates in an infinitely expanding type reference and the
-other is not the Any, Null, or Undefined type, S and T are not compared by the rules in the preceding
+other is not the Any, Null, or Undefined type, *S* and *T* are not compared by the rules in the preceding
 sections. Instead, for the relationship to be considered true,
 
-* S and T must both be type references to the same named type, and
+* *S* and *T* must both be type references to the same named type, and
 * the relationship in question must be true for each corresponding pair of type arguments in the
-type argument lists of S and T.
+type argument lists of *S* and *T*.
 
 
-Likewise, when making type inferences (section 3.8.6) from a type S to a type T, if either type originates in
+Likewise, when making type inferences (section 3.8.6) from a type *S* to a type *T*, if either type originates in
 an infinitely expanding type reference, then
 
-* if S and T are type references to the same named type, inferences are made from each type
-argument in S to each type argument in T,
+* if *S* and *T* are type references to the same named type, inferences are made from each type
+argument in *S* to each type argument in *T*,
 * otherwise, no inferences are made.
 
 
